--- a/src/widgets/sink_input_item.ui
+++ b/src/widgets/sink_input_item.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <template class="PlaybackItem" parent="AdwBin">
+  <template class="SinkInputItem" parent="AdwBin">
     <child>
       <object class="AdwPreferencesGroup">
         <child>
@@ -21,7 +21,7 @@
 
                 <child>
                   <object class="LevelBox" id="level_box">
-                    <property name="icon-name" bind-source="PlaybackItem" bind-property="icon-name" bind-flags="sync-create" />
+                    <property name="icon-name" bind-source="SinkInputItem" bind-property="icon-name" bind-flags="sync-create" />
                   </object>
 
                   <!-- <object class="GtkLevelBar" id="level_bar">
@@ -56,9 +56,9 @@
                     <child>
                       <object class="GtkLabel">
                         <property name="ellipsize">end</property>
-                        <property name="label" bind-source="PlaybackItem" bind-property="title" bind-flags="sync-create" />
+                        <property name="label" bind-source="SinkInputItem" bind-property="title" bind-flags="sync-create" />
                         <property name="lines">0</property>
-                        <property name="mnemonic-widget">PlaybackItem</property>
+                        <property name="mnemonic-widget">SinkInputItem</property>
                         <property name="wrap">True</property>
                         <property name="wrap-mode">word-char</property>
                         <property name="xalign">0</property>
@@ -72,7 +72,7 @@
                     <child>
                       <object class="GtkLabel">
                         <property name="ellipsize">end</property>
-                        <property name="label" bind-source="PlaybackItem" bind-property="subtitle" bind-flags="sync-create" />
+                        <property name="label" bind-source="SinkInputItem" bind-property="subtitle" bind-flags="sync-create" />
                         <property name="lines">0</property>
                         <property name="wrap">True</property>
                         <property name="wrap-mode">word-char</property>
@@ -90,7 +90,7 @@
                 <child>
                   <object class="GtkBox">
                     <property name="spacing">12</property>
-                    <!-- <child>
+                    <child>
                       <object class="GtkComboBoxText">
                         <items>
                           <item id="factory">Headphones</item>
@@ -101,7 +101,7 @@
                         <property name="active">0</property>
                       </object>
 
-                    </child> -->
+                    </child>
 
                     <child>
                       <object class="GtkButton">
