--- a/src/pages/playback_page.ui
+++ b/src/pages/playback_page.ui
@@ -21,6 +21,8 @@
                         <property name="valign">start</property>
                         <property name="homogeneous">true</property>
                         <property name="selection-mode">none</property>
+                        <property name="max-children-per-line">1</property>
+                        <property name="min-children-per-line">1</property>
                       </object>
                     </child>
                   </object>
@@ -35,6 +37,8 @@
                         <property name="valign">start</property>
                         <property name="homogeneous">true</property>
                         <property name="selection-mode">none</property>
+                        <property name="max-children-per-line">1</property>
+                        <property name="min-children-per-line">1</property>
                       </object>
                     </child>
                   </object>
